tests/paczka2/big_fuzzy/80615815.err
Error in line 14: S915 S915 24,8
Error in line 22: eZL3pJJ7Z1 A368 70,2
Error in line 31: 6BXWKH A799 2,6
Error in line 44: Hdqjp A799 37,60
Error in line 23: eZL3pJJ7Z1 A799 9,8
Error in line 50: S915 A368 11,4
Error in line 64: aAXee S445 74,5
Error in line 72: 6BXWKH S445 85,5
Error in line 57: Hdqjp A799 38,5
Error in line 69: OI7d S915 83,4
Error in line 95: OI7d A799 36,7
Error in line 101: eZL3pJJ7Z1 A799 85,84
Error in line 103: wzAvtkzg3nt A368 46,6
Error in line 85: eZL3pJJ7Z1 A799 60,6
Error in line 111: eZL3pJJ7Z1 S915 320,8
Error in line 113: eZL3pJJ7Z1 S445 54,7
Error in line 117: OI7d S445 79,6
Error in line 124: OI7d S915 207,46
Error in line 115: wzAvtkzg3nt A799 66,2
Error in line 142: OI7% A799 14,8
Error in line 122: OI7d S915 60,7
Error in line 144: Hdqjp A799 53,9
Error in line 145: wzAvtkzg3nt S445 377,6
Error in line 156: eZL3pJJ7Z$ A368 376,2
Error in line 154: wzAvtkzg3nt A799 49,8
Error in line 158: wzAvtkzg3nt S915 80,3
Error in line 155: eZL3pJJ7Z1 A368 83,6
Error in line 146: OI7d A799 73,0
Error in line 204: 6BXWKH S445 14,7
Error in line 217: OI7d A799 $2,0
Error in line 222: eZL3pJJ7Z1 S915 2,1
Error in line 236: S915 S445 92,4
Error in line 199: aAXee S915 76,0
